# shipment_qna_bot

./: .gitignore  README.md  error.txt  final_verify_output.txt  libraries.txt  logs_debug.txt  main.py  pyproject.toml  repro_output.txt  requirements.txt  session_test_fix_verify.txt  test.ipynb  test_results.txt  verify_fix.py  verify_output.txt
.agent/workflows/: dev-continuity.md
.github/workflows/: block-dev-artifacts-on-main.yml  main_rokr_shipmentqnabot.yml  main_shipmentqnabot.yml  vec_rag_lg_dev_shipmentqnabot.yml  working_branch_110326_shipmentqnabot.yml
data/processed/: manifest.json  shipment_2025-01_1.jsonl  shipment_2025-02_1.jsonl  shipment_2025-03_1.jsonl  shipment_2025-04_1.jsonl  shipment_2026-02_1.jsonl
data/reports/: missing_in_index.txt  missing_in_manifest.txt  reconcile_report.json
docs/: SYSTEM_LOGIC.md  ready_ref.md
src/scripts/: benchmark_chat.py  create_index.py  evaluate_bot.py  final_verify_date.py  ingest_all.py  inspect_index.py  reconcile_index.py  reindex_data.py  repro_retrieval.py  test_graph.py  (+2 more)
tests/: conftest.py  test_analytics_chart_spec.py  test_analytics_continuity.py  test_analytics_metadata.py  test_answer_node.py  test_duckdb_engine.py  test_graph.py  test_graph_paths.py  test_harden_verification.py  test_hardening.py  test_integration_live.py  test_ready_ref.py  test_rls.py  test_route_chat.py  test_schemas_chat.py  test_session.py  test_static_overview.py  test_static_weather_rendering.py  test_weather_impact_node.py  test_weather_routing.py  test_weather_tool.py  verify_analytics_node.py  verify_weather.py
(+46 files in other folders)
